# cdk-aws-apigateway-http-api

./: .projenrc.py  README.md  app.py  pyproject.toml
cdk_aws_apigateway_http_api/stacks/: my_stack.py
stacks/: apigateway_http_api_stack.py
tests/: test_example.py
